--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       crossorigin=""
     />
 
-    <!-- Babel Standalone (für JSX im Browser) -->
+    <!-- Babel Standalone for compiling JSX in browser -->
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 
     <style>
@@ -24,7 +24,6 @@
         /* Dark Mode Glass Variables */
         --glass: rgba(30, 41, 59, 0.7);
         --glass-border: rgba(255, 255, 255, 0.1);
-        --glass-heavy: rgba(15, 23, 42, 0.85);
         --primary: #3b82f6;
         --blur: 16px;
       }
@@ -142,17 +141,18 @@
       .leaflet-control-container .leaflet-bottom { z-index: 400; }
     </style>
 
-    <!-- Import Map for Modules (using public CDNs) -->
+    <!-- Import Map using esm.sh for consistency -->
     <script type="importmap">
 {
   "imports": {
     "react": "https://esm.sh/react@18.2.0",
+    "react-dom": "https://esm.sh/react-dom@18.2.0",
     "react-dom/client": "https://esm.sh/react-dom@18.2.0/client",
-    "leaflet": "https://unpkg.com/leaflet@1.9.4/dist/leaflet-src.esm.js",
+    "leaflet": "https://esm.sh/leaflet@1.9.4",
     "react-leaflet": "https://esm.sh/react-leaflet@4.2.1?external=react,react-dom,leaflet",
-    "lucide-react": "https://esm.sh/lucide-react@0.292.0?external=react",
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
-    "react/": "https://aistudiocdn.com/react@^19.2.0/"
+    "react/": "https://aistudiocdn.com/react@^19.2.0/",
+    "lucide-react": "https://aistudiocdn.com/lucide-react@^0.555.0"
   }
 }
 </script>
@@ -165,10 +165,9 @@
       import React, { useState, useEffect, useRef } from 'react';
       import { createRoot } from 'react-dom/client';
       import { MapContainer, TileLayer, Popup, useMapEvents, Polyline, CircleMarker } from 'react-leaflet';
-      import { Download, Upload, MapPin, Trash2, Edit2, Check, X, Plus, Play, RotateCcw, Trophy, XCircle, Navigation, Map as MapIcon } from 'lucide-react';
       import L from 'leaflet';
 
-      // Fix Leaflet Icons in standalone mode
+      // Fix Leaflet Icons (workaround for Webpack/missing assets issues)
       delete L.Icon.Default.prototype._getIconUrl;
       L.Icon.Default.mergeOptions({
         iconRetinaUrl: 'https://unpkg.com/leaflet@1.9.4/dist/images/marker-icon-2x.png',
@@ -176,7 +175,40 @@
         shadowUrl: 'https://unpkg.com/leaflet@1.9.4/dist/images/marker-shadow.png',
       });
 
-      // --- TYPES ---
+      // --- ICONS (Inlined to avoid module errors) ---
+      const Icon = ({ path, className }) => (
+        <svg 
+          xmlns="http://www.w3.org/2000/svg" 
+          width="24" height="24" 
+          viewBox="0 0 24 24" 
+          fill="none" 
+          stroke="currentColor" 
+          strokeWidth="2" 
+          strokeLinecap="round" 
+          strokeLinejoin="round" 
+          className={className}
+        >
+          {path}
+        </svg>
+      );
+
+      const Icons = {
+        MapPin: (props) => <Icon {...props} path={<><path d="M20 10c0 6-9 13-9 13s-9-7-9-13a9 9 0 0 1 18 0z"/><circle cx="12" cy="10" r="3"/></>} />,
+        Edit2: (props) => <Icon {...props} path={<path d="M17 3a2.828 2.828 0 1 1 4 4L7.5 20.5 2 22l1.5-5.5L17 3z"/>} />,
+        Trash2: (props) => <Icon {...props} path={<><polyline points="3 6 5 6 21 6"/><path d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"/><line x1="10" y1="11" x2="10" y2="17"/><line x1="14" y1="11" x2="14" y2="17"/></>} />,
+        Download: (props) => <Icon {...props} path={<><path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"/><polyline points="7 10 12 15 17 10"/><line x1="12" y1="15" x2="12" y2="3"/></>} />,
+        Upload: (props) => <Icon {...props} path={<><path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"/><polyline points="17 8 12 3 7 8"/><line x1="12" y1="3" x2="12" y2="15"/></>} />,
+        Check: (props) => <Icon {...props} path={<polyline points="20 6 9 17 4 12"/>} />,
+        X: (props) => <Icon {...props} path={<><line x1="18" y1="6" x2="6" y2="18"/><line x1="6" y1="6" x2="18" y2="18"/></>} />,
+        Plus: (props) => <Icon {...props} path={<><line x1="12" y1="5" x2="12" y2="19"/><line x1="5" y1="12" x2="19" y2="12"/></>} />,
+        Play: (props) => <Icon {...props} path={<polygon points="5 3 19 12 5 21 5 3"/>} />,
+        XCircle: (props) => <Icon {...props} path={<><circle cx="12" cy="12" r="10"/><line x1="15" y1="9" x2="9" y2="15"/><line x1="9" y1="9" x2="15" y2="15"/></>} />,
+        Trophy: (props) => <Icon {...props} path={<><path d="M8 21h8"/><path d="M12 17v4"/><path d="M7 4h10"/><path d="M17 4v3a5 5 0 0 1-10 0V4"/><line x1="10" y1="0" x2="22" y2="0" transform="translate(0 2)"/><line x1="2" y1="0" x2="14" y2="0" transform="translate(0 2)"/></>} />, 
+        Navigation: (props) => <Icon {...props} path={<polygon points="3 11 22 2 13 21 11 13 3 11"/>} />,
+        Map: (props) => <Icon {...props} path={<><polygon points="1 6 1 22 8 18 16 22 23 18 23 2 16 6 8 2 1 6"/><line x1="8" y1="2" x2="8" y2="18"/><line x1="16" y1="6" x2="16" y2="22"/></>} />,
+      };
+
+      // --- TYPES & DATA ---
       const LocationCategory = {
         CITY: 'Stadt',
         COUNTRY: 'Land',
@@ -279,7 +311,7 @@
           <div className="flex flex-col h-full glass-panel rounded-3xl overflow-hidden shadow-2xl animate-fade-in-up">
             <div className="p-6 border-b border-white/10 bg-white/5 backdrop-blur-md relative z-10">
               <h2 className="text-lg font-bold text-slate-100 mb-4 flex items-center">
-                <Edit2 className="w-4 h-4 mr-2 text-blue-400" /> {editingId ? 'Ort bearbeiten' : 'Neuer Ort'}
+                <Icons.Edit2 className="w-4 h-4 mr-2 text-blue-400" /> {editingId ? 'Ort bearbeiten' : 'Neuer Ort'}
               </h2>
               <form onSubmit={handleSubmit} className="space-y-4">
                 <input type="text" value={name} onChange={e => setName(e.target.value)} className={inputClass} placeholder="Name" required />
@@ -292,10 +324,10 @@
                 </div>
                 <div className="flex gap-2">
                   <Button type="button" variant={isPickModeActive ? "success" : "secondary"} size="sm" onClick={onEnablePickMode} className="flex-1">
-                    <MapPin className="w-4 h-4 mr-1.5" /> {isPickModeActive ? 'Wähle...' : 'Karte'}
+                    <Icons.MapPin className="w-4 h-4 mr-1.5" /> {isPickModeActive ? 'Wähle...' : 'Karte'}
                   </Button>
                   <Button type="submit" size="sm" className="flex-[2]">{editingId ? 'Speichern' : 'Hinzufügen'}</Button>
-                  {editingId && <Button type="button" variant="secondary" size="sm" onClick={() => setEditingId(null)}><X className="w-4 h-4" /></Button>}
+                  {editingId && <Button type="button" variant="secondary" size="sm" onClick={() => setEditingId(null)}><Icons.X className="w-4 h-4" /></Button>}
                 </div>
               </form>
             </div>
@@ -309,8 +341,8 @@
                          <div className="text-[10px] text-blue-300">{loc.category}</div>
                        </div>
                        <div className="flex gap-1 opacity-60 group-hover:opacity-100">
-                         <button onClick={() => handleEdit(loc)} className="p-1.5 hover:text-blue-400"><Edit2 className="w-4 h-4" /></button>
-                         <button onClick={() => onDeleteLocation(loc.id)} className="p-1.5 hover:text-red-400"><Trash2 className="w-4 h-4" /></button>
+                         <button onClick={() => handleEdit(loc)} className="p-1.5 hover:text-blue-400"><Icons.Edit2 className="w-4 h-4" /></button>
+                         <button onClick={() => onDeleteLocation(loc.id)} className="p-1.5 hover:text-red-400"><Icons.Trash2 className="w-4 h-4" /></button>
                        </div>
                      </div>
                    ))}
@@ -318,8 +350,8 @@
                )}
             </div>
             <div className="p-4 border-t border-white/10 bg-white/5 flex gap-2">
-              <Button variant="secondary" size="sm" className="flex-1" onClick={handleExport}><Download className="w-3 h-3 mr-1" /> Export</Button>
-              <Button variant="secondary" size="sm" className="flex-1" onClick={() => fileInputRef.current?.click()}><Upload className="w-3 h-3 mr-1" /> Import</Button>
+              <Button variant="secondary" size="sm" className="flex-1" onClick={handleExport}><Icons.Download className="w-3 h-3 mr-1" /> Export</Button>
+              <Button variant="secondary" size="sm" className="flex-1" onClick={() => fileInputRef.current?.click()}><Icons.Upload className="w-3 h-3 mr-1" /> Import</Button>
               <input type="file" ref={fileInputRef} className="hidden" accept=".json" onChange={handleImport} />
             </div>
           </div>
@@ -382,11 +414,11 @@
                   <div className="text-center">
                     <div className="text-xs text-slate-400 mb-1">Finde:</div>
                     <div key={currentQuestion?.id} className="text-3xl font-bold text-white flex items-center justify-center gap-3 animate-fade-in-up">
-                      <MapPin className="text-red-400 animate-pulse" /> {currentQuestion?.name}
+                      <Icons.MapPin className="text-red-400 animate-pulse" /> {currentQuestion?.name}
                     </div>
                   </div>
                   <div className="pl-6 border-l border-white/10">
-                    <Button onClick={resetQuiz} variant="glass" size="sm" className="rounded-full w-10 h-10 p-0"><XCircle /></Button>
+                    <Button onClick={resetQuiz} variant="glass" size="sm" className="rounded-full w-10 h-10 p-0"><Icons.XCircle /></Button>
                   </div>
                 </div>
               </div>
@@ -399,7 +431,7 @@
                     <option className="text-black" value="Alle">Alle Kategorien</option>
                     {Object.values(LocationCategory).map(c => <option className="text-black" key={c} value={c}>{c}</option>)}
                   </select>
-                  <Button onClick={handleStartQuiz} variant="primary" className="rounded-xl"><Play className="w-4 h-4 mr-2" /> Start</Button>
+                  <Button onClick={handleStartQuiz} variant="primary" className="rounded-xl"><Icons.Play className="w-4 h-4 mr-2" /> Start</Button>
                 </div>
               </div>
             )}
@@ -426,7 +458,7 @@
                 <div className="absolute bottom-12 left-1/2 transform -translate-x-1/2 z-[1000] w-full max-w-sm px-4">
                   <div className="glass-panel bg-slate-900/90 rounded-3xl p-6 shadow-2xl text-center animate-pop-in">
                     <div className={`inline-flex items-center justify-center w-16 h-16 rounded-full mb-4 ${isCorrect ? 'bg-green-500/20 text-green-400' : 'bg-red-500/20 text-red-400'} animate-marker-bounce`}>
-                      {isCorrect ? <Trophy size={32} /> : <Navigation size={32} />}
+                      {isCorrect ? <Icons.Trophy className="w-8 h-8" /> : <Icons.Navigation className="w-8 h-8" />}
                     </div>
                     <h4 className={`text-2xl font-bold mb-1 ${isCorrect ? 'text-green-400' : 'text-red-400'}`}>{isCorrect ? 'Super!' : 'Daneben!'}</h4>
                     <p className="text-3xl font-black text-white mb-6">{quizState.lastGuessDistance} <span className="text-lg font-normal text-slate-500">km</span></p>
@@ -438,7 +470,7 @@
               {quizState.isFinished && (
                 <div className="absolute inset-0 bg-slate-950/80 backdrop-blur-md z-[1000] flex items-center justify-center p-4">
                   <div className="glass-panel bg-slate-900 rounded-3xl p-10 text-center animate-pop-in max-w-md w-full">
-                    <Trophy className="w-16 h-16 text-yellow-400 mx-auto mb-4 animate-marker-bounce" />
+                    <Icons.Trophy className="w-16 h-16 text-yellow-400 mx-auto mb-4 animate-marker-bounce" />
                     <h2 className="text-3xl font-bold text-white mb-2">Quiz beendet!</h2>
                     <p className="text-xl text-blue-400 font-bold mb-6">{quizState.score} / {quizState.questions.length} Richtig</p>
                     <div className="space-y-3">
@@ -471,7 +503,7 @@
           <div className="flex flex-col h-screen overflow-hidden text-slate-200">
             <header className={`glass-panel z-50 transition-all duration-700 ${isQuizActive ? '-mt-24 opacity-0 absolute' : 'mt-4 mx-4 mb-4 relative'} px-6 py-4 flex items-center justify-center shrink-0 rounded-2xl`}>
               <div className="flex items-center gap-3">
-                <div className="p-2 bg-blue-600 rounded-xl shadow-lg animate-marker-bounce"><MapIcon className="text-white" /></div>
+                <div className="p-2 bg-blue-600 rounded-xl shadow-lg animate-marker-bounce"><Icons.Map className="text-white" /></div>
                 <div><h1 className="text-xl font-bold text-white">Topografie-Trainer</h1></div>
               </div>
             </header>
